Remove lombok and commons collections dependencies