@@ -2,14 +2,10 @@ package io.codemodder.plugins.maven.operator;
 
 import com.github.zafarkhaja.semver.Version;
 import java.io.File;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.function.Predicate;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import lombok.SneakyThrows;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.SystemUtils;
 import org.apache.commons.lang3.text.StrSubstitutor;
@@ -209,7 +205,7 @@ public class Util {
       nativeExecutables.add(".cmd");
       nativeExecutables.replaceAll(ext -> path + ext);
     } else {
-      nativeExecutables = List.of(path);
+      nativeExecutables = Arrays.asList(path);
     }
 
     String pathContentString = System.getenv("PATH");
@@ -244,10 +240,12 @@ public class Util {
     return result;
   }
 
-  @SneakyThrows
   public static List<Node> selectXPathNodes(Node node, String expression) {
-    // return Util.INSTANCE.selectXPathNodes(node, expression);
-    return createXPathExpression(expression).selectNodes(node);
+    try {
+      return createXPathExpression(expression).selectNodes(node);
+    } catch (Exception e) {
+      throw new RuntimeException(e);
+    }
   }
 
   public static final SimpleNamespaceContext namespaceContext;
